collapse fix#5

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -487,6 +487,7 @@ section {
 
 #kostenButton {
   color: #555555;
+  cursor: pointer;
 }
 
 .about .image {
